# textual-pyfiglet

./: .gitignore  CHANGELOG  CHANGELOG.md  Changelog.md  Justfile  Makefile  README.md  justfile  main.py  pyproject.toml  tmux.sh  todo.md
examples/: colorbox.py  gradient_ex.py  rich_example.py
notes/: inner_figlet.md
src/textual_pyfiglet/: cli.py  demo.py  figletwidget.py  figletwidget_backup.py  figletwidget_old.py  fonts_list.py  help.md  rich_figlet.py  styles.tcss
src/textual_pyfiglet/demo/: main.py  screens.py  settingsbar.py  validators.py
src/textual_pyfiglet/pyfiglet/: __init__.py
src/textual_pyfiglet/pyfiglet/fonts/: __init__.py
textual_pyfiglet/: __main__.py  demo.py  figletwidget.py  styles.tcss
textual_pyfiglet/pyfiglet/fonts/: __init__.py
