[project]
name = "textual-pyfiglet"
version = "0.6.0"
description = "A Widget implementation of PyFiglet for Textual"
readme = "README.md"
authors = [
    { name = "edward-jazzhands", email = "ed.jazzhands@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "textual>=2.1.1",
]

[project.scripts]
textual-pyfiglet = "textual_pyfiglet.demo:run_demo"

[project.optional-dependencies]
fonts = [
    "textual-pyfiglet-fonts>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
    # add pytest
]
